k8s-manifests/beneficiaries/31-service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: beneficiaries-db
  namespace: default
  labels:
    app: beneficiaries
    app.kubernetes.io/name: beneficiaries
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: db
  selector:
    app: beneficiaries
    component: database
