k8s-manifests/beneficiaries/33-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: beneficiaries-redis
  namespace: default
  labels:
    app: beneficiaries
    app.kubernetes.io/name: beneficiaries
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: beneficiaries
    component: redis
